--- a/public/css/loginstyles.css
+++ b/public/css/loginstyles.css
@@ -1,4 +1,5 @@
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -15,9 +16,7 @@ html {
     scroll-behavior: smooth;
 }
 
-nav {
-    height: 70px;
-}
+
 
 .box {
     margin-top: 20px;
