--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,7 +20,7 @@
         <!-- Logo Image -->
         <img src="https://res.cloudinary.com/mhmd/image/upload/v1557368579/logo_iqjuay.png" width="45" alt="" class="d-inline-block align-middle mr-2">
         <!-- Logo Text -->
-        <span class="text-uppercase font-weight-bold">GO VEGAN</span>
+        <span class="text-uppercase font-weight-bold">TO DO APP</span>
         </a>
 
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
@@ -28,9 +28,8 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active"><a href="" class="nav-link">Login <span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a href="/index" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="/home" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/register" class="nav-link">Register</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
         </div>
     </div>
